login page done

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,3 +1,15 @@
 {
-  "Signin": "Sign in to your account"
+  "and": "and",
+  "Continue Microsoft": "CONTINUE WITH MICROSOFT",
+  "Contract": "By clicking continue, you agree to our",
+  "Email": "Email Address",
+  "Enter email": "Enter your uOttawa email address to sign in to your DOOdate account",
+  "LOGIN": "LOGIN",
+  "NoAccount": "Don't have an account?",
+  "OR": "OR",
+  "Password": "Password",
+  "PP": "Privacy policy",
+  "Signin": "Sign in to your account",
+  "SignUp": "Sign Up",
+  "TOS": "Terms of service"
 }
