--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -1,3 +1,15 @@
 {
-  "Signin": "Se connecter à votre compte"
+  "and": "et",
+  "Continue Microsoft": "CONTINUEZ AVEC MICROSOFT",
+  "Contract": "En appuyant continuer, vous acceptez nos",
+  "Email": "Adresse Courriel",
+  "Enter email": "Entrez votre adresse courriel uOttawa pour vous connecter à votre compte DOOdate",
+  "LOGIN": "SE CONNECTER",
+  "NoAccount": "Vous n'avez pas de compte?",
+  "OR": "OU",
+  "Password": "Mot de passe",
+  "PP": "politique de confidentialité",
+  "Signin": "Se connecter à votre compte",
+  "SignUp": "Inscrivez-vous",
+  "TOS": "conditions de service"
 }
