home page translation

--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -1,5 +1,6 @@
 {
   "Add Class": "Ajouter une Classe",
+  "All Classes": "Toutes les Classes",
   "and": "et",
   "Calendar": "Calendrier",
   "Continue Microsoft": "CONTINUEZ AVEC MICROSOFT",
@@ -17,5 +18,6 @@
   "Signin": "Se connecter à votre compte",
   "SignUp": "Inscrivez-vous",
   "TOS": "conditions de service",
+  "Upcoming": "Prochaines Tâches",
   "View Settings": "Paramètres de vue"
 }
