--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Add Class": "Add Class",
+  "All Classes": "All Classes",
   "and": "and",
   "Calendar": "Calendar",
   "Continue Microsoft": "CONTINUE WITH MICROSOFT",
@@ -17,5 +18,6 @@
   "Signin": "Sign in to your account",
   "SignUp": "Sign Up",
   "TOS": "Terms of service",
+  "Upcoming": "Upcoming",
   "View Settings": "View Settings"
 }
