--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -19,5 +19,6 @@
   "SignUp": "Sign Up",
   "TOS": "Terms of service",
   "Upcoming": "Upcoming",
+  "Upload": "Tap to upload syllabus",
   "View Settings": "View Settings"
 }
