--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -19,5 +19,6 @@
   "SignUp": "Inscrivez-vous",
   "TOS": "conditions de service",
   "Upcoming": "Prochaines Tâches",
+  "Upload": "Tapez pour ajouter votre syllabus",
   "View Settings": "Paramètres de vue"
 }
