added weight for eventcard

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -20,5 +20,6 @@
   "TOS": "Terms of service",
   "Upcoming": "Upcoming",
   "Upload": "Tap to upload syllabus",
-  "View Settings": "View Settings"
+  "View Settings": "View Settings",
+  "Weight": "Weight:"
 }
