--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -20,5 +20,6 @@
   "TOS": "conditions de service",
   "Upcoming": "Prochaines Tâches",
   "Upload": "Tapez pour ajouter votre syllabus",
-  "View Settings": "Paramètres de vue"
+  "View Settings": "Paramètres de vue",
+  "Weight": "Poids: "
 }
