--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -14,12 +14,16 @@
   "OR": "OR",
   "Password": "Password",
   "PP": "Privacy policy",
+  "Preparing Upload": "Preparing Upload: ",
   "Settings": "Settings",
   "Signin": "Sign in to your account",
   "SignUp": "Sign Up",
   "TOS": "Terms of service",
   "Upcoming": "Upcoming",
   "Upload": "Tap to upload syllabus",
+  "Upload failed": "Upload failed - tap to retry",
+  "Uploaded": "Uploaded: ",
+  "Uploading": "Uploading: ",
   "View Settings": "View Settings",
   "Weight": "Weight:"
 }
