--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -14,12 +14,16 @@
   "OR": "OU",
   "Password": "Mot de passe",
   "PP": "politique de confidentialité",
+  "Preparing Upload": "Préparation du fichier: ",
   "Settings": "Paramètres",
   "Signin": "Se connecter à votre compte",
   "SignUp": "Inscrivez-vous",
   "TOS": "conditions de service",
   "Upcoming": "Prochaines Tâches",
   "Upload": "Tapez pour ajouter votre syllabus",
+  "Upload failed": "Le téléchargement n'a pas réussi - tappez pour essayez encore",
+  "Uploaded": "Téléchargé: ",
+  "Uploading": "Téléchargement du fichier: ",
   "View Settings": "Paramètres de vue",
   "Weight": "Poids: "
 }
