add dyslexic font and font switch in settings

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -6,6 +6,7 @@
   "Continue Microsoft": "CONTINUE WITH MICROSOFT",
   "Contract": "By clicking continue, you agree to our",
   "Dark Mode": "Dark Mode",
+  "Dyslexic Font": "Dyslexic Font",
   "Email": "Email Address",
   "Enter email": "Enter your uOttawa email address to sign in to your DOOdate account",
   "Language": "Language",
