--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -6,6 +6,7 @@
   "Continue Microsoft": "CONTINUEZ AVEC MICROSOFT",
   "Contract": "En appuyant continuer, vous acceptez nos",
   "Dark Mode": "Mode sombre",
+  "Dyslexic Font": "Police Dyslexique",
   "Email": "Adresse Courriel",
   "Enter email": "Entrez votre adresse courriel uOttawa pour vous connecter à votre compte DOOdate",
   "Language": "Langue",
