add better screen reader text for navbar

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,8 +1,10 @@
 {
   "Add Class": "Add Class",
+  "AddClassAria": "Open Add Class page",
   "All Classes": "All Classes",
   "and": "and",
   "Calendar": "Calendar",
+  "CalendarAria": "Open Calendar Page",
   "Continue Microsoft": "CONTINUE WITH MICROSOFT",
   "Contract": "By clicking continue, you agree to our",
   "Dark Mode": "Dark Mode",
@@ -17,6 +19,7 @@
   "PP": "Privacy policy",
   "Preparing Upload": "Preparing Upload: ",
   "Settings": "Settings",
+  "SettingsAria": "Open Settings Page",
   "Signin": "Sign in to your account",
   "SignUp": "Sign Up",
   "TOS": "Terms of service",
