change text under add syllabus button to be different to make it easier to use voice control

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -28,6 +28,7 @@
   "Upload failed": "Upload failed - tap to retry",
   "Uploaded": "Uploaded: ",
   "Uploading": "Uploading: ",
+  "UploadMsg": "Upload syllabus",
   "View Settings": "View Settings",
   "Weight": "Weight:"
 }
