--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -28,6 +28,7 @@
   "Upload failed": "Le téléchargement n'a pas réussi - tappez pour essayez encore",
   "Uploaded": "Téléchargé: ",
   "Uploading": "Téléchargement du fichier: ",
+  "UploadMsg": "Ajouter votre syllabus",
   "View Settings": "Paramètres de vue",
   "Weight": "Poids: "
 }
