add bigger font & bigger font toggle

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -3,6 +3,7 @@
   "AddClassAria": "Open Add Class page",
   "All Classes": "All Classes",
   "and": "and",
+  "Big Font": "Big Font",
   "Calendar": "Calendar",
   "CalendarAria": "Open Calendar Page",
   "Continue Microsoft": "CONTINUE WITH MICROSOFT",
