--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -3,6 +3,7 @@
   "AddClassAria": "Ouvrir la page pour ajouter une Classe",
   "All Classes": "Toutes les Classes",
   "and": "et",
+  "Big Font": "Police Grande",
   "Calendar": "Calendrier",
   "CalendarAria": "Ouvrir la page du Calendrier",
   "Continue Microsoft": "CONTINUEZ AVEC MICROSOFT",
