add late policy to eventcard, and examples, and translation

--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -31,5 +31,6 @@
   "Uploading": "Téléchargement du fichier: ",
   "UploadMsg": "Ajouter votre syllabus",
   "View Settings": "Paramètres de vue",
-  "Weight": "Poids: "
+  "Weight": "Poids: ",
+  "Late Policy": "Politique de retard: "
 }
