--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -31,5 +31,6 @@
   "Uploading": "Uploading: ",
   "UploadMsg": "Upload syllabus",
   "View Settings": "View Settings",
-  "Weight": "Weight:"
+  "Weight": "Weight:",
+  "Late Policy": "Late Policy: "
 }
