--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -29,6 +29,7 @@
   "Upload failed": "Upload failed - tap to retry",
   "Uploaded": "Uploaded: ",
   "Uploading": "Uploading: ",
+  "Processing": "Processing...",
   "UploadMsg": "Upload syllabus",
   "View Settings": "View Settings",
   "Weight": "Weight:"
