--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -29,6 +29,7 @@
   "Upload failed": "Le téléchargement n'a pas réussi - tappez pour essayez encore",
   "Uploaded": "Téléchargé: ",
   "Uploading": "Téléchargement du fichier: ",
+  "Processing": "En traitement...",
   "UploadMsg": "Ajouter votre syllabus",
   "View Settings": "Paramètres de vue",
   "Weight": "Poids: "
