--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -14,6 +14,7 @@
   "Enter email": "Enter your uOttawa email address to sign in to your DOOdate account",
   "Language": "Language",
   "LOGIN": "LOGIN",
+  "Demo": "Begin Demo",
   "NoAccount": "Don't have an account?",
   "OR": "OR",
   "Password": "Password",
