--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -14,6 +14,7 @@
   "Enter email": "Entrez votre adresse courriel uOttawa pour vous connecter à votre compte DOOdate",
   "Language": "Langue",
   "LOGIN": "SE CONNECTER",
+  "Demo": "Commencer la démo",
   "NoAccount": "Vous n'avez pas de compte?",
   "OR": "OU",
   "Password": "Mot de passe",
